# Fredholm2D

./: Array.h  CMakeLists.txt  FE2DSolver.cpp  GaussNodes.cpp  LA.h  LASSolver.cpp  LASSolver.h  README.md
src/: FE2DSolver.cpp  FE2DSolver.h  GaussNodes.h  LAOperations.cpp  Spline2D.cpp  Spline2D.h
test/: CMakeLists.txt  test.cpp
